[package]
name = "TrackerSatUtxoCore"
version = "0.1.0"
authors = ["@Inatendu29 From Wolf Epic Club"]
edition = "2021"
description = "A Bitcoin blockchain indexer to analyze transactions, UTXOs, Satoshi and support Ordinals."
repository = "https://github.com/inatendu29/TrackerSatUtxoCore.git"
license = "MIT"
readme = "README.md"

[dependencies]
bitcoin = { version = "0.31", features = ["std"] }
rocksdb = "0.22"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10"
num_cpus = "1.16"
bitcoincore-rpc = { version = "0.18.0"}
zmq = "0.10"
toml = "0.8"
ureq = { version = "2.9.7", features = ["tls", "json"] }